--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>satish s</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Rokkitt&family=Sacramento&family=Splash&display=swap" rel="stylesheet">
@@ -11,15 +11,15 @@
   </head>
   <body>
     <div class="top-container">
-        <img class="top-cloud" src="images2/cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="cloud.png" alt="cloud-img">
       <h1>I'm Satish S.</h1>
       <h2>a <span class="pro">Full Stack</span> developer.</h2>
-      <img class="bottom-cloud" src="images2/cloud.png" alt="cloud-img">
-       <img class="mountain"src="images2/mountain.png" alt="mountain-img">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+       <img class="mountain"src="mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="profile" src="images2/pri_158434728-modified.png" alt="profile-img">
+      <img class="profile" src="pri_158434728-modified.png" alt="profile-img">
       <h2>Hello.</h2>
       <p class="intro">I am an full stack web Developer. I ❤️ TEA & ❤️ to code.</p>
     </div>
@@ -27,12 +27,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="computer" src="images2/web-programming (1).png" alt="computer-img">
+        <img class="computer" src="web-programming (1).png" alt="computer-img">
         <h3>Design & Development</h3>
         <p>I started learning to code when i was 22 years old because i wanted to make my own web sites and etc.over time,i have gained wealth  of experiance designing and web development.</p>
       </div>
       <div class="skill-row">
-        <img class="chai-tea" src="images2/coffee.png" alt="chai-tea-img">
+        <img class="chai-tea" src="coffee.png" alt="chai-tea-img">
         <h3>HOT chai-tea CHALLENGE</h3>
         <p>But my best skills is actually drinking a lot of TEA.iam the king of HOT chai-tea CHALLENGES.GINGER AND JAGERY are my favourite BEVAGERS .</p>
       </div>
